Send Email (Only Text)

--- a/pom.xml
+++ b/pom.xml
@@ -9,5 +9,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <exec.mainClass>com.emailapi.Email_API_Maven</exec.mainClass>
     </properties>
+   
+    <dependencies>
+        
+        <!--Java Mail API-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+
+    </dependencies>
 </project>
